23Feb03=======================================================================
1. Added show/wm7d command (a US only callbook server) [by K1XX].
2. Added a prototype show/db0sdx command (w.i.p).
3. Added set/dxcq and set/dxitu zone commands [Translators: I have added
dxcqu, dxcqs, dxitus and dxituu to Messages].
4. Add new Commands to manuals (g0vgs)
22Feb03=======================================================================
1. changed qrz.com address 
2. added Charlie's [K1XX] new wpxloc.raw data stuff to get WA1, KC3 type 
callsigns to work better.
3. added in set/usstate command which prints any US state information 
available on both the spotted (LHS of time) and spotter (RHS of time).
[Translators: I have added usstates and usstateu to Messages].
4. Merged in the new (faster) DXUser.pm.

[NOTE] this version will require Storable to be installed. On the
other hand the code may work without, in a compatible way. This bit hasn't 
been very well tested (the 'no Storable' condition that is). 

[*** NOTE ***] make sure that you do an 'export_user' BEFORE restarting
you node. (Yes I know this is like a shrinkwrap licence, but I can't
help it).

It will take several minutes for the node to restart when it does the 
conversion from .v2 to .v3 user file. Please go and have a good strong cup
of tea whilst this is happening.

If it fails then you will need to edit your latest user_asc file on (or about)
line 25 it says: $ref = decode($f[1]); you will need to change that to 
$ref = asc_decode($f[1]); and then do: perl user_asc
 
DO MAKE SURE THAT you include subdirectories in your CVS update 

21Feb03=======================================================================
1. moved the export of the users file to Wednesday night (GMT) to avoid 
possible crashes and/or delays during a contest weekend.
14Feb03=======================================================================
1. some major changes to the structure of the manual documentation.  To bring